# deployzy

./: .env.example  .gitignore  .goreleaser.yml  CLAUDE.md  Makefile  README.md  md-viewer.html
.github/workflows/: ci.yml  release.yml
cli/: Dockerfile
cli/internal/client/: client.go
cli/internal/commands/: apiclient.go  authtoken.go  deploy.go  display.go  http.go  login.go  projects.go  root.go  start.go  status.go  tcp.go  tls.go  version.go
cli/internal/config/: config.go
cli/internal/inspector/: inspector.go
deploy/: README.md  backup.sh  get.sh  install-backup.sh  install.sh  redeploy.sh  restore.sh
homebrew-tap/: README.md
homebrew-tap/Formula/: deployzy.rb  serverme.rb
npm-package/: README.md  package.json
proto/: codec.go  messages.go
sdk-js/: README.md  package.json
sdk-js/src/: client.ts  errors.ts  index.ts  types.ts
sdk-python/: README.md  pyproject.toml
sdk-python/deployzy/: __init__.py  client.py  errors.py  types.py
server/: go.mod  go.sum
server/cmd/servermesrv/: main.go
server/cmd/welcomebackfill/: main.go
server/internal/analytics/: botdetect_test.go  bots.go  bots_test.go  collector.go
server/internal/api/: admin_analytics_handlers.go  admin_backup_handlers.go  admin_email_handlers.go  admin_handlers.go  admin_plans_handlers.go  admin_template_handlers.go  backup_handlers.go  billing_handlers.go  blog_handlers.go  cron_handlers.go  database_handlers.go  db_editor_handlers.go  db_editor_mongo.go  db_editor_mysql.go  handlers.go  (+22 more)
web/: .env.production  package-lock.json  package.json
web/public/: logo-preview.html
(+153 files in other folders)
