[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployzy"
version = "1.1.2"
description = "Python SDK for the Deployzy deploy & tunnel platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Deployzy"}]
keywords = ["deployzy", "tunnel", "ngrok", "localhost", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://deployzy.com"
Repository = "https://github.com/jams24/deployzy"
Documentation = "https://deployzy.com/docs/sdks/python"

[tool.setuptools.packages.find]
include = ["deployzy*"]
